Fixed minor bug and also fixed vanilla cape option overriding all capes bug